@@ -1,0 +1,28 @@
+<?php
+/**
+ * This class provides a filter for the personal recipient search.
+ *
+ * Copyright 2010 The Horde Project (http://www.horde.org/)
+ *
+ * See the enclosed file COPYING for license information (GPL). If you
+ * did not receive this file, see http://www.fsf.org/copyleft/gpl.html.
+ *
+ * @author   Michael Slusarz <slusarz@horde.org>
+ * @category Horde
+ * @license  http://www.fsf.org/copyleft/gpl.html GPL
+ * @package  IMP
+ */
+class IMP_Search_Filter_Personal extends IMP_Search_Filter_Builtin
+{
+    /**
+     * Initialization tasks.
+     */
+    protected function _init()
+    {
+        $this->_id = 'filter_personal';
+        $this->_label = _("Personal Messages");
+
+        $this->add(new IMP_Search_Element_Personal());
+    }
+
+}
